# phoronix-reader-rust

./: Cargo.toml  README.md
src/: article.rs  homepage.rs  main.rs  phoronix.html  phoronix_cli.rs  phoronix_gui.rs  style.css
