[package]
name = "phoronix-reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.1.1"
select = "0.5.0"
colored = "2"
textwrap = "0.14.2"
getopts = "0.2"
gtk = "0.14"
gdk = "0.14"
pango = "0.14"